deploy/production/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gozar-production
  labels:
    app.kubernetes.io/part-of: gozar
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
